fix text box spacing, background image, button font

--- a/docs/style.css
+++ b/docs/style.css
@@ -10,6 +10,7 @@ body {
   display: flex;
   justify-content: center;
   background-color: black;
+  font-family: "Courgette", cursive;
 }
 img {
   width: auto;
@@ -18,30 +19,47 @@ img {
 }
 
 button {
+  font-family: "Courgette", cursive;
   position: absolute;
   display: block;
-  opacity: 0.2;
-  z-index: 1;
-  background-color: white;
+  opacity: 0.4;
+  z-index: 2;
+  font-size: 1.5em;
+  background-color: transparent;
+  color: white;
+  border: none;
+}
+
+button:focus {
+  outline: none;
+}
+
+section article div {
+  pointer-events: none;
+  border-radius: 4px;
+  box-shadow: 0px 0px 10px black;
+  background-color: black;
+  padding: 2em;
+  line-height: 1.5em;
 }
 
 section article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   top: 0;
   left: 0;
-  margin: 20vh;
-  background-color: black;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.6);
   opacity: 0;
   color: whitesmoke;
-  transition: opacity 1000ms ease;
+  transition: opacity 1500ms ease-out;
   pointer-events: none;
-  font-family: "Courgette", cursive;
-  font-size: 1.5em;
-  padding: 1em;
-  border-radius: 4px;
-  z-index: 2;
+  font-size: 1.7em;
   outline: none;
-  box-shadow: 5px 5px 50px black;
+  z-index: 4;
 }
 
 section.one button {
@@ -94,8 +112,8 @@ section.seven button {
 }
 
 section.eight button {
-  top: 70%;
-  left: 70%;
+  top: 30%;
+  left: 66%;
   height: 7%;
   width: 7%;
 }
@@ -103,4 +121,12 @@ section.eight button {
 .container {
   position: relative;
   width: max-content;
+}
+
+.shadow {
+  position: absolute;
+  left: 57%;
+  top: 10%;
+  height: 50%;
+  z-index: 1;
 }
